--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ layout: default
       <a href="/about" class="btn btn-secondary">Read More <i class="fa fa-arrow-right"></i></a>
     </div>
     <div class="col-md-6 col-sm-12 text-right">
-	    <a href="https://peninsula.dsachapters.org/assets/images/ECE%204%20All%20SSF%20volunteers%20at%20campaign%20launch%202022.01.15.jpg">
-      <img src="assets/images/ECE 4 All SSF volunteers at campaign launch 2022.01.15-thumb.jpg" width="90%" height="auto" alt="Dozens of volunteers at the Pre-school for all campaign launch!" />
+	    <a href="">
+      <img src="assets/images/DSA/banner-mobilize_orig.png" width="90%" height="auto" alt="Drawing of organizing workers!" />
 	    </a>
     </div>
   </div>
