--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
     </div>
     <div class="col-md-6 col-sm-12 text-right">
 	    <a href="">
-      <img src="assets/images/DSA/banner-mobilize_orig.png" width="90%" height="auto" alt="Drawing of organizing workers!" />
+      <img src="assets/images/DSA/banner-mobilize_orig.png" width="90%" height="auto" alt="Drawing of organizing workers!">
 	    </a>
     </div>
   </div>
